some fix on mobile

--- a/app/styles/partials/_containers.scss
+++ b/app/styles/partials/_containers.scss
@@ -307,6 +307,7 @@ div.md-open-menu-container {
 	}
 	.switch {
 		padding-left: 25px;
+		margin-top:8px;
 		.md-label {
 			padding-left: 0%;
 		}
@@ -427,6 +428,7 @@ div.md-open-menu-container {
 	}
 	.switch {
 		padding-left: 10px;
+		margin-top:0;
 		.md-label {
 			padding-right: 10px;
 		}
